# CoolSynth

./: ARP_EXPANSION_PLAN.md  CC_MIDI_REFACTOR.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_V2.md  DESIGN.md  DESIGN_V2.md  DONE.md  GEMINI.md  IMPLEMENTATION_PHASE1.md  IMPLEMENTATION_PHASE10.md  IMPLEMENTATION_PHASE11.md  IMPLEMENTATION_PHASE12.md  IMPLEMENTATION_PHASE13.md  IMPLEMENTATION_PHASE14.md  IMPLEMENTATION_PHASE15.md  IMPLEMENTATION_PHASE16.md  IMPLEMENTATION_PHASE2.md  IMPLEMENTATION_PHASE3.md  IMPLEMENTATION_PHASE4.md  IMPLEMENTATION_PHASE5.md  IMPLEMENTATION_PHASE6.md  IMPLEMENTATION_PHASE7.md  IMPLEMENTATION_PHASE8.md  IMPLEMENTATION_PHASE9.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  NEW_UI_DESIGN_AND_IMPLEMENTATION_PLAN.md  NEW_UI_FEATURE_REQS_AND_PLAN.md  README.md  REQUIREMENTS.md  REQUIREMENTS_V2.md  REVIEW_V2_PLAN.md  TODO.md  UI_VISUALIZATION_FEATURE.md  coolsynth_30_presets_with_scifi_additions.yaml  coolsynth_v2_phase8_fx_rack.diff  coolsynth_v2_phase8_manual_steps.md  test-fx-chorus.cspatch  test-fx-delay.cspatch  (+6 more)
.claude/: settings.local.json
.github/: release.yml
.github/workflows/: windows-manual-validation.yml  windows-release.yml
build_aux/: factory_presets_snippet.txt
docs/: minilab3-default-messages.md  vst3-smoke-test.md
resources/controller_profiles/: minilab3_arturia_mode.json
scripts/: GenerateBuildInfo.cmake  apply_normalized_master_gains.ps1  generate_factory_presets.ps1  inject_v3_into_factory_presets.py  splice_factory_presets.ps1
scripts/ci/: BuildAndTest.ps1  Common.ps1  PackageRelease.ps1
src/: BuildInfo.cpp  BuildInfo.h
src/midi/: ControllerProfile.cpp  ControllerProfile.h  MidiLearn.cpp  MidiLearn.h  MidiMappingEngine.cpp  MidiMappingEngine.h  MidiMonitor.cpp  MidiMonitor.h  MidiToControllerEvent.h  Minilab3Profile.cpp  Minilab3Profile.h
src/parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
src/plugin/: ArpAdvancedOverlay.cpp  ArpAdvancedOverlay.h  EditorTooltips.cpp  ProcessorScopeFifo.h  SynthAudioProcessor.cpp  SynthAudioProcessor.h  SynthAudioProcessorEditor.cpp  SynthAudioProcessorEditor.h
src/presets/: FactoryPresets.cpp  FactoryPresets.h  PatchState.cpp  PatchState.h
src/standalone/: CoolSynthStandaloneApp.cpp  SettingsStore.cpp  SettingsStore.h  StandaloneAudioSupport.cpp  StandaloneAudioSupport.h  StandaloneMidiInput.cpp  StandaloneMidiInput.h
src/synth/: Arpeggiator.cpp  Arpeggiator.h  Compressor.cpp  Compressor.h  EuclideanRhythm.h  GlobalDelay.cpp  GlobalDelay.h  GlobalFxRack.cpp  GlobalFxRack.h  Phaser.cpp  Phaser.h  SynthEngine.cpp  SynthEngine.h  SynthEngineV2.cpp  SynthEngineV2.h  SynthParameters.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
src/ui/: ActionButtonLookAndFeel.h  HardwareFader.cpp  HardwareFader.h  HardwareKnob.cpp  HardwareKnob.h  LedToggleButton.cpp  LedToggleButton.h  MidiMonitorPanel.cpp  MidiMonitorPanel.h  PianoBarComponent.cpp  PianoBarComponent.h  SegmentedChoiceGroup.cpp  SegmentedChoiceGroup.h  SignalChainVisualizer.cpp  SignalChainVisualizer.h  StandaloneAudioStatusPanel.cpp  StandaloneAudioStatusPanel.h  StandaloneMidiInputPanel.cpp  StandaloneMidiInputPanel.h  StandaloneSettingsDialog.cpp  StandaloneSettingsDialog.h  StandaloneStatusBar.cpp  StandaloneStatusBar.h  SynthSection.cpp  SynthSection.h  UiPalette.h
tests/: MidiLearnTests.cpp  PatchStateTests.cpp  StabilityAndDisconnectTests.cpp
tools/: NormalizePresets.cpp
